--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,14 @@ yarn-error.log*
 coverage/
 
 # キャッシュ
-.cache/ 
+.cache/
+
+# テスト関連
+test/
+jest.config.js
+babel.config.js
+
+# 開発環境
+src/
+package.json
+package-lock.json 
